--- a/todos/templates/add.html
+++ b/todos/templates/add.html
@@ -42,11 +42,12 @@
       <br/>
      <br>
    <input type="submit" value="Submit"/>
-</form></div>
+</form>
     </div>
-    </div>
-</main>
-</body>
+      </div>
+       </div>
+   </main>
+  </body>
 <br>
    <br>
       <br>
