--- a/todos/templates/FlexBox.html
+++ b/todos/templates/FlexBox.html
@@ -14,33 +14,27 @@
   </head>
   <header>
     <div class="dropdown"style="float:right; background-color: #4CAF50;">
-  <button class="dropbtn"  style="margin-right: 10px;">DropDown</button>
-  <div class="dropdown-content">
-    <a href="/">Home</a>
-    <a href="#">Coming Soon</a>
-  </div>
-    </div>
-
+       <button class="dropbtn"  style="margin-right: 10px;">DropDown</button>
+          <div class="dropdown-content">
+            <a href="/">Home</a>
+              <a href="https://github.com/Edd-Venv/Django_Apps.git">Github Code</a>
+          </div>
+     </div>
   </header>
-  <body>
+ <body>
     <main>
       <h1>Applications</h1>
-      <hr>
-
-
-  </div>
-
-      <div class ="flex-container">
-        <div class="box2"><a href="bills/">
-          <img style="border-radius: 50px" width="100%" src="{% static 'css/pln1.jpg' %}" alt="Picture Of Zolty symbol" /></a>
-        </div>
-          <div class="box2"><a href="todos/">
-            <img width="100%" src="{% static 'css/Todo1.jpg' %}" style="border-radius: 50px" alt="Picture of Todo"/>
-          </a></div>
-
-</div>
-
+        <hr>
+          </div>
+        <div class ="flex-container">
+      <div class="box2"><a href="bills/">
+    img style="border-radius: 50px" width="100%" src="{% static 'css/pln1.jpg' %}" alt="Picture Of Zolty symbol" /></a>
+      </div>
+         <div class="box2"><a href="todos/">
+           <img width="100%" src="{% static 'css/Todo1.jpg' %}" style="border-radius: 50px" alt="Picture of Todo"/>
+          </a>
+         </div>
+      </div>
     </main>
-
   </body>
 </html>
