--- a/todos/templates/home.html
+++ b/todos/templates/home.html
@@ -14,23 +14,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
 </head>
-<body style="background-color: brown;">
-<div style="font-family: Raleway, sans-serif; box-sizing: border-box;
-           padding-bottom: 25px; margin-left: 1px;"
-     class="div1"><h1><b><i>WELCOME</i></b></h1></div>
-
-<div style="box-sizing: border-box; border: 30%px" class="topnav">
-  <a class="active" href="/apps/"><big>Applications</big></a>
-     <a href="admin/">Admin Site</a>
-  <a href="#contact">Contact Us</a>
-</div>
-</div>
-
-<main>
- <br>
+  <body style="background-color: brown;">
+    <div style="font-family: Raleway, sans-serif; box-sizing: border-box;
+       padding-bottom: 25px; margin-left: 1px;"
+        class="div1">
+        <h1><b><i>WELCOME</i></b></h1>
+    </div>
+  <div style="box-sizing: border-box; border: 30%px" class="topnav">
+    <a class="active" href="/apps/"><big>Applications</big></a>
+      <a href="admin/">Admin Site</a>
+       <a href="#contact">Contact Us</a>
+      </div>
+  </div>
+ <main>
+   <br>
      <br>
-     <br>
-     <br>
+       <br>
+      <br>
      <br>
     <p style="font-size: 1.4em;">Welcome to my website where I post some of my WebApplications.
         Please note that some of the Applications are currently under Development.
@@ -38,35 +38,32 @@
         using <big>Python, Django, HTML5, CSS3</big> and <big>Bootstrap.</big>
     </p>
 <p style="font-size: 1.4em;">Also not that some buttons are dummy buttons i.e Facebook and Linkedlin</p>
-    <p><big>To login to the Admin Site:</big></p>
+  <p><big>To login to the Admin Site:</big></p>
     <ul style="font-size: 1.2em">
         <li>Login Name: Visitor </li>
         <li>Password: Staff2019 </li>
     </ul>
-
-    <br>
-     <br>
-     <br>
+  <br>
 <br>
+  <br>
     <br>
+      <br>
      <br>
-     <br>
-     <br>
+   <br>
+ <br>
 </main>
 <br>
-<br>
-<br>
-<br>
-<br>
-
+  <br>
+    <br>
+   <br>
+ <br>
 </body>
 <footer>
-    <ul style="background-color: black; padding: 10px 10px 10px 10px; width:25%;">
-  <li style="display:inline;"><a href="admin/">Admin Site</a></li>
-    <li style="display:inline;"><a href="">Contact Us</a></li>
-    <li style="display:inline;"><a href>FaceBook</a></li>
-    <li style="display:inline;"><a href>Linkedln</a></li>
-</ul>
-
-</footer>
+     <ul style="background-color: black; padding: 10px 10px 10px 10px; width:25%;">
+       <li style="display:inline;"><a href="admin/">Admin Site</a></li>
+         <li style="display:inline;"><a href="">Contact Us</a></li>
+           <li style="display:inline;"><a href>FaceBook</a></li>
+            <li style="display:inline;"><a href>Linkedln</a></li>
+     </ul>
+ </footer>
 </html>
