--- a/todos/templates/Applications.html
+++ b/todos/templates/Applications.html
@@ -10,28 +10,39 @@
           href="{% static 'css/FlexBox.css'%}"/>
   </head>
   <header>
-    <div class="dropdown"style="float:right; background-color: #4CAF50;">
-       <button class="dropbtn"  style="margin-right: 10px;">DropDown</button>
-          <div class="dropdown-content">
-            <a href="/">Home</a>
-              <a href="https://github.com/Edd-Venv/Django_Apps.git">Github Code</a>
-          </div>
-     </div>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <h1 style="color: Black;"></h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+       </button>
+     <div style="float: left" class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/Edd-Venv/Django_Apps.git" target="_blank">Github Code</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   </header>
- <body>
-    <main>
-      <h1>Applications</h1>
-        <hr>
+    <br>
+      <br/>
+  <body>
+ <main>
+   </div>
+      <div class ="flex-container">
+        <div class="box2"><a href="bills/">
+          <img style="border-radius: 50px" width="100%" src="{% static 'css/pln1.jpg' %}" alt="Picture Of Zolty symbol" /></a>
+        </div>
+          <div class="box2"><a href="todos/">
+            <img width="100%" src="{% static 'css/Todo1.jpg' %}" style="border-radius: 50px" alt="Picture of Todo"/></a>
           </div>
-        <div class ="flex-container">
-      <div class="box2"><a href="bills/">
-    img style="border-radius: 50px" width="100%" src="{% static 'css/pln1.jpg' %}" alt="Picture Of Zolty symbol" /></a>
-      </div>
-         <div class="box2"><a href="todos/">
-           <img width="100%" src="{% static 'css/Todo1.jpg' %}" style="border-radius: 50px" alt="Picture of Todo"/>
-          </a>
-         </div>
-      </div>
+            <div class="box2"><a href="recipes/">
+             <img width="100%" src="{% static 'css/recipe1.png' %}" style="border-radius: 50px" alt="Picture of food"/></a>
+             </div>
+    </div>
     </main>
   </body>
 </html>
