--- a/todos/templates/addRecipe.html
+++ b/todos/templates/addRecipe.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Todo Application.">
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/style.css'%}">
-    
+    {% include 'bootstrap.html' %}
     </head>
 <header>
     <div style="background-color: black;">
