--- a/todos/templates/details_recipe.html
+++ b/todos/templates/details_recipe.html
@@ -3,6 +3,7 @@
     <meta name="description" content="Recipe Application.">
     <title> Recipe Details Page</title>
 
+    {% include 'bootstrap.html' %}
     
 </head>
   <body style="background-color: brown; color: black;">
