--- a/todos/templates/amounts.html
+++ b/todos/templates/amounts.html
@@ -1,23 +1,24 @@
 {% load static %}
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Todo Application.">
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'css/style.css'%}">
-    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Todo Application." />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
+
     {% include 'bootstrap.html' %}
-    
-    </head>
-    <header>
-    <h1><i><big>New Bill </big></i></h1>
-    <hr/>
-</header>
-<body style="background-color: brown;">
-<main>
-    <div class = "flex-container">
-        <div style=" background: brown;
+  </head>
+  <header>
+    <h1>
+      <i><big>New Bill </big></i>
+    </h1>
+    <hr />
+  </header>
+  <body style="background-color: brown;">
+    <main>
+      <div class="flex-container">
+        <div
+          style=" background: brown;
         color: black;
         border: 0px solid grey;
         width: 30%; height: 48%;
@@ -25,39 +26,53 @@
         margin-left: 35%;
         padding-bottom: 20%;
         box-shadow: 0px 0px 0px grey;
-        align-content: flex-end;" >
-<form action="/amounts/" method="post" >
-    {% csrf_token %}
+        align-content: flex-end;"
+        >
+          <form action="/amounts/" method="post">
+            {% csrf_token %}
 
-    <label for="title" style=" font-size: 1.2em;">Name Of Bill:</label>
-       <br>
-          <input id="title" type="text"
-            name="title" maxlength="20" style="width: 100%; background-color:
-              lightgrey; box-shadow: 2px 2px 2px grey; font-size: 1.4em;" required>
-               <br>
-                <br/>
-              <label for="amount" style=" font-size: 1.2em;">Amount: </label><br/>
-            <input id="amount" type="number"
-           name="amount" maxlength="20" style="width: 100%; background-color:
-         lightgrey; box-shadow: 2px 2px 2px grey; font-size: 1.4em;" required>
-       <br>
-    <br>
-   <input type="submit" value="Submit" style="font-size: 1.2em;"/>
-</form>
-     </div>
-         </div>
-     </div>
-  </main>
-</body>
-<br>
-   <br>
-     <br>
-       <br>
-    <br>
-  <br>
-<br>
-<footer>
-<a href="/bills/"style="color:white;">
-    <input type="submit" value="Cancel"/></a>
-    </footer>
+            <label for="title" style=" font-size: 1.2em;">Name Of Bill:</label>
+            <br />
+            <input
+              id="title"
+              type="text"
+              name="title"
+              maxlength="20"
+              style="width: 100%; background-color:
+              lightgrey; box-shadow: 2px 2px 2px grey; font-size: 1.4em;"
+              required
+            />
+            <br />
+            <br />
+            <label for="amount" style=" font-size: 1.2em;">Amount: </label
+            ><br />
+            <input
+              id="amount"
+              type="number"
+              name="amount"
+              maxlength="20"
+              style="width: 100%; background-color:
+         lightgrey; box-shadow: 2px 2px 2px grey; font-size: 1.4em;"
+              required
+            />
+            <br />
+            <br />
+            <input type="submit" value="Submit" style="font-size: 1.2em;" />
+          </form>
+        </div>
+      </div>
+    </main>
+  </body>
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <footer>
+    <a href="/bills/" style="color:white;">
+      <input type="submit" value="Cancel"
+    /></a>
+  </footer>
 </html>
