--- a/todos/templates/index.html
+++ b/todos/templates/index.html
@@ -1,30 +1,31 @@
 {% load static %}
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>To do's</title>
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'css/style.css'%}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Todo Application.">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Todo Application." />
 
-   {% include 'bootstrap.html' %} 
-    
-</head>
+    {% include 'bootstrap.html' %}
+  </head>
   <body style="font-family: Raleway, sans-serif; background-color: brown;">
-     <header>
-        <h1 id="myh1"><i>ToDo List</i></h1>
-      <hr>
+    <header>
+      <h1 id="myh1"><i>ToDo List</i></h1>
+      <hr />
     </header>
-  <ul>
-{%for todo in todos %}
-   <li><a href="/todos/details/{{todo.id}}">{{todo.title}}</a>: <b>{{todo.text}}</b></li>
-{% endfor %}
-  </ul>
-      <a href="todos/add/">Add Todo</a>
-         <br>
-      <a href="/apps">Applications</a>
-   <br/>
- <a href='/'>Home</a>
- </body>
+    <ul>
+      {%for todo in todos %}
+      <li>
+        <a href="/todos/details/{{ todo.id }}">{{ todo.title }}</a
+        >: <b>{{ todo.text }}</b>
+      </li>
+      {% endfor %}
+    </ul>
+    <a href="todos/add/">Add Todo</a>
+    <br />
+    <a href="/apps">Applications</a>
+    <br />
+    <a href="/">Home</a>
+  </body>
 </html>
