--- a/todos/templates/indexBills.html
+++ b/todos/templates/indexBills.html
@@ -1,57 +1,61 @@
 {% load static %}
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Bills</title>
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'css/style.css'%}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Todo Application.">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Todo Application." />
 
     {% include 'bootstrap.html' %}
-<style>
-    
-  table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  }
-    
-  th, td {
-  padding: 3px;
-  text-align: left;
-  }
-    
-</style>
-</head>
-   <body style="Background-color:Brown">
-<header>
-   <h1 id="myh1" style="margin-top:20px;">Table Of Bills</h1>
-    <hr>
-</header>
-  <br/>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+
+      th,
+      td {
+        padding: 3px;
+        text-align: left;
+      }
+    </style>
+  </head>
+  <body style="Background-color:Brown">
+    <header>
+      <h1 id="myh1" style="margin-top:20px;">Table Of Bills</h1>
+      <hr />
+    </header>
+    <br />
     <div class="table-responsive">
-       <table class=" table-striped table-hover" style=" color: black; width:20%">
-         <thead>
-             <tr>
-          <th>BillName</th>
-        <td><big>Cost</big></td>
-      </tr>
-   </thead>
-  <tbody>
-{% for bill in bills %}
-   <tr>
-      <td style="font-size:2em;">
-          <big>{{bill.title}}</big></td>
-        <td style="font-size:2.5em;">{{bill.amount}}</td>
-      </tr>
- {% endfor %}
-</tbody>
- </table>
+      <table
+        class=" table-striped table-hover"
+        style=" color: black; width:20%"
+      >
+        <thead>
+          <tr>
+            <th>BillName</th>
+            <td><big>Cost</big></td>
+          </tr>
+        </thead>
+        <tbody>
+          {% for bill in bills %}
+          <tr>
+            <td style="font-size:2em;">
+              <big>{{ bill.title }}</big>
+            </td>
+            <td style="font-size:2.5em;">{{ bill.amount }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
-       <a href="amounts/">Add Bill</a>
-         <br>
-          <a href="/apps">Applications</a>
-        <br/>
-     <a href='/'>Home</a>
+    <a href="amounts/">Add Bill</a>
+    <br />
+    <a href="/apps">Applications</a>
+    <br />
+    <a href="/">Home</a>
   </body>
 </html>
